--- a/src/app/calendar/calendar.component.html
+++ b/src/app/calendar/calendar.component.html
@@ -1,8 +1,15 @@
 <nb-card>
-  <nb-card-header>
+  <!-- <nb-card-header>
     <h1 class="h5">Selected date: {{ date | date }}</h1>
-  </nb-card-header>
-  <nb-card-body>
-    <nb-calendar [(date)]="date"> </nb-calendar>
-  </nb-card-body>
+  </nb-card-header> -->
+  <nb-card>
+    <nb-card-body>
+      <nb-calendar-month-picker
+        [(month)]="month"
+        [date]="month"
+        [cellComponent]="monthCellComponent"
+      >
+      </nb-calendar-month-picker>
+    </nb-card-body>
+  </nb-card>
 </nb-card>
