Changes to be committed: 	modified:   src/app/app.module.ts 	modified:   src/app/calendar/calendar.component.html 	modified:   src/app/calendar/calendar.component.ts

--- a/src/app/calendar/calendar.component.html
+++ b/src/app/calendar/calendar.component.html
@@ -1,7 +1,16 @@
 <nb-card>
-  <!-- <nb-card-header>
-    <h1 class="h5">Selected date: {{ date | date }}</h1>
-  </nb-card-header> -->
+  <nb-card>
+    <nb-card-body>
+      <nb-calendar [(date)]="date"> </nb-calendar>
+      <h1 class="h5">You have selected date: {{ date | date }}</h1>
+    </nb-card-body>
+    <div style="padding: 1%">
+      <button type="button" nbButton outline status="primary" size="medium">
+        Click to Yearview
+      </button>
+    </div>
+  </nb-card>
+
   <nb-card>
     <nb-card-body>
       <nb-calendar-month-picker
