--- a/src/app/calendar/calendar.component.html
+++ b/src/app/calendar/calendar.component.html
@@ -1,17 +1,17 @@
-<nb-card>
+<!-- <nb-card>
   <nb-card>
     <nb-card-body>
       <nb-calendar [(date)]="date"> </nb-calendar>
       <h1 class="h5">You have selected date: {{ date | date }}</h1>
     </nb-card-body>
     <div style="padding: 1%">
-      <button type="button" nbButton outline status="primary" size="medium">
+      <button type="button" nbButton outline status="info" size="medium" (click)="(onClick)">
         Click to Yearview
       </button>
     </div>
-  </nb-card>
+  </nb-card> -->
 
-  <nb-card>
+<!-- <nb-card>
     <nb-card-body>
       <nb-calendar-month-picker
         [(month)]="month"
@@ -20,5 +20,14 @@
       >
       </nb-calendar-month-picker>
     </nb-card-body>
-  </nb-card>
+  </nb-card> -->
+<!-- </nb-card> -->
+<nb-card>
+  <nb-card-body>
+    <nb-calendar [(date)]="date" [showWeekNumber]="true"> </nb-calendar>
+    <h1 class="h5">You have selected date: {{ date | date }}</h1>
+    <button type="button" nbButton outline status="info" size="medium" (click)="(onClick)">
+      Click to Yearview
+    </button>
+  </nb-card-body>
 </nb-card>
